authentication update
